parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComa
    TkCanvas
    TkUsing
    TkBegin
    TkOfType
    TkEnd
    TkBoolean
    TkInteger

Grammar

Rule 0     S' -> expr
Rule 1     expr -> expr TkPuntoYComa instr
Rule 2     expr -> instr
Rule 3     empty -> <empty>
Rule 4     instr -> TkIdent TkAsignacion expbin
Rule 5     instr -> TkIf booleana TkThen instr TkElse instr TkDone
Rule 6     instr -> TkIf booleana TkThen instr TkDone
Rule 7     instr -> TkWhile booleana TkRepeat instr TkDone
Rule 8     instr -> TkWith TkIdent TkFrom TkNum TkTo TkNum TkRepeat instr TkDone
Rule 9     instr -> TkFrom TkNum TkTo TkNum TkRepeat instr TkDone
Rule 10    instr -> TkPrint TkLienzo
Rule 11    instr -> TkRead TkIdent
Rule 12    arit -> arit operatorA arit
Rule 13    arit -> TkResta arit
Rule 14    arit -> TkParAbre arit TkParCierra
Rule 15    arit -> TkNum
Rule 16    arit -> TkIdent
Rule 17    expbin -> arit
Rule 18    expbin -> booleana
Rule 19    expbin -> lienzo
Rule 20    booleana -> booleana operatorB booleana
Rule 21    booleana -> booleana operatorB arit
Rule 22    booleana -> booleana operatorB lienzo
Rule 23    booleana -> TkParAbre booleana TkParCierra
Rule 24    booleana -> booleana TkNegacion
Rule 25    booleana -> TkTrue
Rule 26    booleana -> TkFalse
Rule 27    booleana -> TkIdent
Rule 28    lienzo -> lienzo operatorL lienzo
Rule 29    lienzo -> TkParAbre lienzo TkParCierra
Rule 30    lienzo -> TkRot lienzo
Rule 31    lienzo -> lienzo TkTras
Rule 32    lienzo -> TkLienzo
Rule 33    operatorA -> TkSuma
Rule 34    operatorA -> TkResta
Rule 35    operatorA -> TkMult
Rule 36    operatorA -> TkDiv
Rule 37    operatorA -> TkMod
Rule 38    operatorB -> TkMenor
Rule 39    operatorB -> TkMenorIgual
Rule 40    operatorB -> TkMayor
Rule 41    operatorB -> TkMayorIgual
Rule 42    operatorB -> TkIgual
Rule 43    operatorB -> TkDesIgual
Rule 44    operatorB -> TkConjuncion
Rule 45    operatorB -> TkDisyuncion
Rule 46    operatorL -> TkHorConcat
Rule 47    operatorL -> TkVerConcat

Terminals, with rules where they appear

TkAsignacion         : 4
TkBegin              : 
TkBoolean            : 
TkCanvas             : 
TkComa               : 
TkConjuncion         : 44
TkDesIgual           : 43
TkDisyuncion         : 45
TkDiv                : 36
TkDone               : 5 6 7 8 9
TkElse               : 5
TkEnd                : 
TkFalse              : 26
TkFrom               : 8 9
TkHorConcat          : 46
TkIdent              : 4 8 11 16 27
TkIf                 : 5 6
TkIgual              : 42
TkInteger            : 
TkLienzo             : 10 32
TkMayor              : 40
TkMayorIgual         : 41
TkMenor              : 38
TkMenorIgual         : 39
TkMod                : 37
TkMult               : 35
TkNegacion           : 24
TkNum                : 8 8 9 9 15
TkOfType             : 
TkParAbre            : 14 23 29
TkParCierra          : 14 23 29
TkPrint              : 10
TkPuntoYComa         : 1
TkRead               : 11
TkRepeat             : 7 8 9
TkResta              : 13 34
TkRot                : 30
TkSuma               : 33
TkThen               : 5 6
TkTo                 : 8 9
TkTras               : 31
TkTrue               : 25
TkUsing              : 
TkVerConcat          : 47
TkWhile              : 7
TkWith               : 8
error                : 

Nonterminals, with rules where they appear

arit                 : 12 12 13 14 17 21
booleana             : 5 6 7 18 20 20 21 22 23 24
empty                : 
expbin               : 4
expr                 : 1 0
instr                : 1 2 5 5 6 7 8 9
lienzo               : 19 22 28 28 29 30 31
operatorA            : 12
operatorB            : 20 21 22
operatorL            : 28

Parsing method: LALR

state 0

    (0) S' -> . expr
    (1) expr -> . expr TkPuntoYComa instr
    (2) expr -> . instr
    (4) instr -> . TkIdent TkAsignacion expbin
    (5) instr -> . TkIf booleana TkThen instr TkElse instr TkDone
    (6) instr -> . TkIf booleana TkThen instr TkDone
    (7) instr -> . TkWhile booleana TkRepeat instr TkDone
    (8) instr -> . TkWith TkIdent TkFrom TkNum TkTo TkNum TkRepeat instr TkDone
    (9) instr -> . TkFrom TkNum TkTo TkNum TkRepeat instr TkDone
    (10) instr -> . TkPrint TkLienzo
    (11) instr -> . TkRead TkIdent

    TkIdent         shift and go to state 5
    TkIf            shift and go to state 1
    TkWhile         shift and go to state 4
    TkWith          shift and go to state 9
    TkFrom          shift and go to state 6
    TkPrint         shift and go to state 7
    TkRead          shift and go to state 8

    expr                           shift and go to state 3
    instr                          shift and go to state 2

state 1

    (5) instr -> TkIf . booleana TkThen instr TkElse instr TkDone
    (6) instr -> TkIf . booleana TkThen instr TkDone
    (20) booleana -> . booleana operatorB booleana
    (21) booleana -> . booleana operatorB arit
    (22) booleana -> . booleana operatorB lienzo
    (23) booleana -> . TkParAbre booleana TkParCierra
    (24) booleana -> . booleana TkNegacion
    (25) booleana -> . TkTrue
    (26) booleana -> . TkFalse
    (27) booleana -> . TkIdent

    TkParAbre       shift and go to state 13
    TkTrue          shift and go to state 10
    TkFalse         shift and go to state 14
    TkIdent         shift and go to state 11

    booleana                       shift and go to state 12

state 2

    (2) expr -> instr .

    TkPuntoYComa    reduce using rule 2 (expr -> instr .)
    $end            reduce using rule 2 (expr -> instr .)


state 3

    (0) S' -> expr .
    (1) expr -> expr . TkPuntoYComa instr

    TkPuntoYComa    shift and go to state 15


state 4

    (7) instr -> TkWhile . booleana TkRepeat instr TkDone
    (20) booleana -> . booleana operatorB booleana
    (21) booleana -> . booleana operatorB arit
    (22) booleana -> . booleana operatorB lienzo
    (23) booleana -> . TkParAbre booleana TkParCierra
    (24) booleana -> . booleana TkNegacion
    (25) booleana -> . TkTrue
    (26) booleana -> . TkFalse
    (27) booleana -> . TkIdent

    TkParAbre       shift and go to state 13
    TkTrue          shift and go to state 10
    TkFalse         shift and go to state 14
    TkIdent         shift and go to state 11

    booleana                       shift and go to state 16

state 5

    (4) instr -> TkIdent . TkAsignacion expbin

    TkAsignacion    shift and go to state 17


state 6

    (9) instr -> TkFrom . TkNum TkTo TkNum TkRepeat instr TkDone

    TkNum           shift and go to state 18


state 7

    (10) instr -> TkPrint . TkLienzo

    TkLienzo        shift and go to state 19


state 8

    (11) instr -> TkRead . TkIdent

    TkIdent         shift and go to state 20


state 9

    (8) instr -> TkWith . TkIdent TkFrom TkNum TkTo TkNum TkRepeat instr TkDone

    TkIdent         shift and go to state 21


state 10

    (25) booleana -> TkTrue .

    TkParCierra     reduce using rule 25 (booleana -> TkTrue .)
    TkNegacion      reduce using rule 25 (booleana -> TkTrue .)
    TkMenor         reduce using rule 25 (booleana -> TkTrue .)
    TkMenorIgual    reduce using rule 25 (booleana -> TkTrue .)
    TkMayor         reduce using rule 25 (booleana -> TkTrue .)
    TkMayorIgual    reduce using rule 25 (booleana -> TkTrue .)
    TkIgual         reduce using rule 25 (booleana -> TkTrue .)
    TkDesIgual      reduce using rule 25 (booleana -> TkTrue .)
    TkConjuncion    reduce using rule 25 (booleana -> TkTrue .)
    TkDisyuncion    reduce using rule 25 (booleana -> TkTrue .)
    TkThen          reduce using rule 25 (booleana -> TkTrue .)
    TkRepeat        reduce using rule 25 (booleana -> TkTrue .)
    TkPuntoYComa    reduce using rule 25 (booleana -> TkTrue .)
    $end            reduce using rule 25 (booleana -> TkTrue .)
    TkElse          reduce using rule 25 (booleana -> TkTrue .)
    TkDone          reduce using rule 25 (booleana -> TkTrue .)


state 11

    (27) booleana -> TkIdent .

    TkRepeat        reduce using rule 27 (booleana -> TkIdent .)
    TkNegacion      reduce using rule 27 (booleana -> TkIdent .)
    TkMenor         reduce using rule 27 (booleana -> TkIdent .)
    TkMenorIgual    reduce using rule 27 (booleana -> TkIdent .)
    TkMayor         reduce using rule 27 (booleana -> TkIdent .)
    TkMayorIgual    reduce using rule 27 (booleana -> TkIdent .)
    TkIgual         reduce using rule 27 (booleana -> TkIdent .)
    TkDesIgual      reduce using rule 27 (booleana -> TkIdent .)
    TkConjuncion    reduce using rule 27 (booleana -> TkIdent .)
    TkDisyuncion    reduce using rule 27 (booleana -> TkIdent .)
    TkThen          reduce using rule 27 (booleana -> TkIdent .)
    TkParCierra     reduce using rule 27 (booleana -> TkIdent .)


state 12

    (5) instr -> TkIf booleana . TkThen instr TkElse instr TkDone
    (6) instr -> TkIf booleana . TkThen instr TkDone
    (20) booleana -> booleana . operatorB booleana
    (21) booleana -> booleana . operatorB arit
    (22) booleana -> booleana . operatorB lienzo
    (24) booleana -> booleana . TkNegacion
    (38) operatorB -> . TkMenor
    (39) operatorB -> . TkMenorIgual
    (40) operatorB -> . TkMayor
    (41) operatorB -> . TkMayorIgual
    (42) operatorB -> . TkIgual
    (43) operatorB -> . TkDesIgual
    (44) operatorB -> . TkConjuncion
    (45) operatorB -> . TkDisyuncion

    TkThen          shift and go to state 28
    TkNegacion      shift and go to state 23
    TkMenor         shift and go to state 30
    TkMenorIgual    shift and go to state 22
    TkMayor         shift and go to state 27
    TkMayorIgual    shift and go to state 29
    TkIgual         shift and go to state 26
    TkDesIgual      shift and go to state 24
    TkConjuncion    shift and go to state 25
    TkDisyuncion    shift and go to state 32

    operatorB                      shift and go to state 31

state 13

    (23) booleana -> TkParAbre . booleana TkParCierra
    (20) booleana -> . booleana operatorB booleana
    (21) booleana -> . booleana operatorB arit
    (22) booleana -> . booleana operatorB lienzo
    (23) booleana -> . TkParAbre booleana TkParCierra
    (24) booleana -> . booleana TkNegacion
    (25) booleana -> . TkTrue
    (26) booleana -> . TkFalse
    (27) booleana -> . TkIdent

    TkParAbre       shift and go to state 13
    TkTrue          shift and go to state 10
    TkFalse         shift and go to state 14
    TkIdent         shift and go to state 11

    booleana                       shift and go to state 33

state 14

    (26) booleana -> TkFalse .

    TkParCierra     reduce using rule 26 (booleana -> TkFalse .)
    TkNegacion      reduce using rule 26 (booleana -> TkFalse .)
    TkMenor         reduce using rule 26 (booleana -> TkFalse .)
    TkMenorIgual    reduce using rule 26 (booleana -> TkFalse .)
    TkMayor         reduce using rule 26 (booleana -> TkFalse .)
    TkMayorIgual    reduce using rule 26 (booleana -> TkFalse .)
    TkIgual         reduce using rule 26 (booleana -> TkFalse .)
    TkDesIgual      reduce using rule 26 (booleana -> TkFalse .)
    TkConjuncion    reduce using rule 26 (booleana -> TkFalse .)
    TkDisyuncion    reduce using rule 26 (booleana -> TkFalse .)
    TkThen          reduce using rule 26 (booleana -> TkFalse .)
    TkRepeat        reduce using rule 26 (booleana -> TkFalse .)
    TkPuntoYComa    reduce using rule 26 (booleana -> TkFalse .)
    $end            reduce using rule 26 (booleana -> TkFalse .)
    TkElse          reduce using rule 26 (booleana -> TkFalse .)
    TkDone          reduce using rule 26 (booleana -> TkFalse .)


state 15

    (1) expr -> expr TkPuntoYComa . instr
    (4) instr -> . TkIdent TkAsignacion expbin
    (5) instr -> . TkIf booleana TkThen instr TkElse instr TkDone
    (6) instr -> . TkIf booleana TkThen instr TkDone
    (7) instr -> . TkWhile booleana TkRepeat instr TkDone
    (8) instr -> . TkWith TkIdent TkFrom TkNum TkTo TkNum TkRepeat instr TkDone
    (9) instr -> . TkFrom TkNum TkTo TkNum TkRepeat instr TkDone
    (10) instr -> . TkPrint TkLienzo
    (11) instr -> . TkRead TkIdent

    TkIdent         shift and go to state 5
    TkIf            shift and go to state 1
    TkWhile         shift and go to state 4
    TkWith          shift and go to state 9
    TkFrom          shift and go to state 6
    TkPrint         shift and go to state 7
    TkRead          shift and go to state 8

    instr                          shift and go to state 34

state 16

    (7) instr -> TkWhile booleana . TkRepeat instr TkDone
    (20) booleana -> booleana . operatorB booleana
    (21) booleana -> booleana . operatorB arit
    (22) booleana -> booleana . operatorB lienzo
    (24) booleana -> booleana . TkNegacion
    (38) operatorB -> . TkMenor
    (39) operatorB -> . TkMenorIgual
    (40) operatorB -> . TkMayor
    (41) operatorB -> . TkMayorIgual
    (42) operatorB -> . TkIgual
    (43) operatorB -> . TkDesIgual
    (44) operatorB -> . TkConjuncion
    (45) operatorB -> . TkDisyuncion

    TkRepeat        shift and go to state 35
    TkNegacion      shift and go to state 23
    TkMenor         shift and go to state 30
    TkMenorIgual    shift and go to state 22
    TkMayor         shift and go to state 27
    TkMayorIgual    shift and go to state 29
    TkIgual         shift and go to state 26
    TkDesIgual      shift and go to state 24
    TkConjuncion    shift and go to state 25
    TkDisyuncion    shift and go to state 32

    operatorB                      shift and go to state 31

state 17

    (4) instr -> TkIdent TkAsignacion . expbin
    (17) expbin -> . arit
    (18) expbin -> . booleana
    (19) expbin -> . lienzo
    (12) arit -> . arit operatorA arit
    (13) arit -> . TkResta arit
    (14) arit -> . TkParAbre arit TkParCierra
    (15) arit -> . TkNum
    (16) arit -> . TkIdent
    (20) booleana -> . booleana operatorB booleana
    (21) booleana -> . booleana operatorB arit
    (22) booleana -> . booleana operatorB lienzo
    (23) booleana -> . TkParAbre booleana TkParCierra
    (24) booleana -> . booleana TkNegacion
    (25) booleana -> . TkTrue
    (26) booleana -> . TkFalse
    (27) booleana -> . TkIdent
    (28) lienzo -> . lienzo operatorL lienzo
    (29) lienzo -> . TkParAbre lienzo TkParCierra
    (30) lienzo -> . TkRot lienzo
    (31) lienzo -> . lienzo TkTras
    (32) lienzo -> . TkLienzo

    TkResta         shift and go to state 36
    TkParAbre       shift and go to state 42
    TkNum           shift and go to state 40
    TkIdent         shift and go to state 38
    TkTrue          shift and go to state 10
    TkFalse         shift and go to state 14
    TkRot           shift and go to state 44
    TkLienzo        shift and go to state 43

    lienzo                         shift and go to state 37
    expbin                         shift and go to state 39
    booleana                       shift and go to state 41
    arit                           shift and go to state 45

state 18

    (9) instr -> TkFrom TkNum . TkTo TkNum TkRepeat instr TkDone

    TkTo            shift and go to state 46


state 19

    (10) instr -> TkPrint TkLienzo .

    TkPuntoYComa    reduce using rule 10 (instr -> TkPrint TkLienzo .)
    $end            reduce using rule 10 (instr -> TkPrint TkLienzo .)
    TkDone          reduce using rule 10 (instr -> TkPrint TkLienzo .)
    TkElse          reduce using rule 10 (instr -> TkPrint TkLienzo .)


state 20

    (11) instr -> TkRead TkIdent .

    TkPuntoYComa    reduce using rule 11 (instr -> TkRead TkIdent .)
    $end            reduce using rule 11 (instr -> TkRead TkIdent .)
    TkDone          reduce using rule 11 (instr -> TkRead TkIdent .)
    TkElse          reduce using rule 11 (instr -> TkRead TkIdent .)


state 21

    (8) instr -> TkWith TkIdent . TkFrom TkNum TkTo TkNum TkRepeat instr TkDone

    TkFrom          shift and go to state 47


state 22

    (39) operatorB -> TkMenorIgual .

    TkParAbre       reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkTrue          reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkFalse         reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkIdent         reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkResta         reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkNum           reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkRot           reduce using rule 39 (operatorB -> TkMenorIgual .)
    TkLienzo        reduce using rule 39 (operatorB -> TkMenorIgual .)


state 23

    (24) booleana -> booleana TkNegacion .
